[package]
name = "komunikilo"
description = "A chaotic communications simulator."
version = "0.1.3"
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/Fierthraix/komunikilo"
repository = "https://github.com/Fierthraix/komunikilo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1"
easyfft = "0.4"
itertools = "0.10"
num = "0.4"
rand = "0.8"
rand_distr = "0.4"
realfft = "3.3"
reed-solomon= "0.2"
rustfft = "6.1"
sci-rs = "0.3"

[dev-dependencies]
csv = "1.3"
pyo3 = {version = "0.20", features = ["auto-initialize"]}
rayon = "1.7"
rstest = "0.18"
welch-sde = "0.1"

[profile.test]
opt-level = 3
