[package]
name = "komunikilo"
description = "A chaotic communications simulator."
version = "0.1.3"
license = "GPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/Fierthraix/komunikilo"
repository = "https://github.com/Fierthraix/komunikilo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "komunikilo"
crate-type = ["rlib", "cdylib"]

[dependencies]
assert_approx_eq = "1.1"
itertools = "0.10"
ndarray = "0.15"
ndrustfft = "0.4"
num = "0.4"
numpy = "0.21"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
realfft = "3.3"
reed-solomon= "0.2"
rustfft = "6.1"
sci-rs = "0.3"

[dependencies.pyo3]
version = "0.21"
features = ["auto-initialize", "num-complex"]

# Needed until this is resolved: https://github.com/PyO3/pyo3/issues/341
[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
average = "0.14.1"
csv = "1.3"
rayon = "1.7"
rstest = "0.18"
welch-sde = "0.1"

[profile.test]
opt-level = 3
