[tool.poetry]
name = "kom-py"
version = "0.1.0"
description = ""
authors = ["Lucas Rooyakkers <lucas.rooyakkers@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"
plop = "^0.4.0"

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
cargo-extra-args = "--features extension-module"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
